# afana-propdoc

./: .env.example  .gitignore  Makefile  README.md  docker-compose.ollama.yaml  docker-compose.yaml  main.py  package-lock.json  package.json
.github/workflows/: backend.yaml  frontend.yaml  ml.yaml
data/faiss_index/: index.faiss  index.pkl
docs/: Infra.md
docs/components/: CI-CD.md  Preprocessing.md
extensions/chrome/: manifest.json  package-lock.json  package.json  tailwind.config.js
extensions/chrome/src/: App.tsx  content.tsx  index.css
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: MainPage.tsx  api.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/(withSidebar)/: page.tsx  (+1 more)
frontend/src/domain/: api.tsx
helm/charts/: .gitignore
helm/charts/propdoc/: Chart.yaml  values.yaml
helm/charts/propdoc-backend/: Chart.yaml  values.yaml
helm/charts/propdoc-frontend/: Chart.yaml  values.yaml
helm/charts/propdoc-ingress/: Chart.yaml
helm/charts/propdoc-ml/: Chart.yaml  values.yaml
infra/: .gitignore
infra/management/: .terraform.lock.hcl  iam.tf  registry.tf  vars.tf
infra/modules/app/: main.tf  output.tf  variables.tf
infra/production/: .gitignore  dns.tf  main.tf  provider.tf  vars.tf  vpc.tf
infra/production/files/: docker-compose.yaml
notebooks/: base_rag.ipynb  base_rag_git.ipynb  baseline-documents-processing.ipynb  prod-documentss-processing.ipynb
scripts/: package.sh
services/backend/: .gitignore  Dockerfile  Dockerfile-celery  README.md  app.py  celery_init.py  celery_worker.py  config.py  requirements.txt  run.py
services/backend/models/: __init__.py  conversation_model.py  file_model.py  message_model.py
services/backend/naive_ML_for_tests/: app.py  run.py
services/backend/routes/: __init__.py
services/backend/schemas/: conversation_schema.py  create_conversation_schema.py  get_conversation_schema.py  get_message_schema.py  send_message_schema.py  task_result_schema.py
services/backend/services/: conversation_service.py  file_service.py  message_service.py  rag_service.py
services/backend/utils/: user_required.py
services/ml/: .gitignore  Dockerfile  pyproject.toml
services/ml/app/: server.py
services/ml/app/config/: config.py
services/ml/app/models/: qa.py
services/ml/app/routes/: file.py
(+54 files in other folders)
